# Technica.Traces.Tecmp.Converter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conanfile.txt  conaninfo.txt
.github/workflows/: cmake.yml
cmake/: args.cmake  json.cmake  libpcap.cmake  libtecmp.cmake  pcapng.cmake  pcapng_exporter.cmake
pcapng_exporter/: CMakeLists.txt  mapping.cpp  pcapng_exporter.cpp
pcapng_exporter/include/pcapng_exporter/: can.h  lin.h  linktype.h  mapping.hpp  pcapng_exporter.hpp
src/: app.cpp  bmw_app.cpp  lin.h  mapping.cpp  mapping.hpp  tecmp2plp.cpp
tests/: mapping.json
tests/input/: can_error_frames.pcapng  dirty_tecmp.pcapng  pdu_over_tecmp.pcapng  tecmp_can_message.pcapng  tecmp_can_messages_pcap.pcap  tecmp_can_tx.pcapng  tecmp_eth_message.pcapng  tecmp_eth_message_pcap.pcap  tecmp_fr_null_frame_pcap.pcap  tecmp_fr_sync_frame_pcap.pcap  tecmp_lin_messages_pcap.pcap  tecmp_replay_data.pcapng
tests/results/: can_error_frames.pcapng  caneth.pcapng  pdu_over_tecmp.pcapng  tecmp_can_message.pcapng  tecmp_can_messages_pcap.pcapng  tecmp_can_pcapng.pcapng  tecmp_can_tx.pcapng  tecmp_eth_message.pcapng  tecmp_eth_message_pcap.pcapng  tecmp_fr_null_frame_pcap.pcapng  tecmp_fr_sync_frame_pcap.pcapng  tecmp_lin_messages_pcap.pcapng  tecmp_replay_data.pcapng
tests/results/mapped/: caneth.pcapng  dirty_tecmp.pcapng  tecmp_can_message.pcapng  tecmp_can_pcapng.pcapng  tecmp_can_tx.pcapng  tecmp_eth_message.pcapng
